--- a/config/secrets.example.yml
+++ b/config/secrets.example.yml
@@ -4,7 +4,7 @@
 SLACK_CLIENT_ID: "your-slack-client-id"          # SlackアプリのClient ID
 SLACK_CLIENT_SECRET: "your-slack-client-secret"  # SlackアプリのClient Secret
 SLACK_SIGNING_SECRET: "your-slack-signing-secret" # SlackアプリのSigning Secret
-SLACK_STATE_SECRET: "state-secret"               # SlackアプリのState Secret (CSRF対策などに利用)openssl rand -base64 32なので生成
+SLACK_STATE_SECRET: "state-secret"               # SlackアプリのState Secret (CSRF対策などに利用)openssl rand -base64 32などで生成
 
 SLACK_BOT_TOKEN: "xoxb-your-bot-token"           # Slack Bot Token
 DYNAMODB_TABLE: "SlackIntegrations"              # DynamoDBテーブル名
