--- a/backend-cdk/package.json
+++ b/backend-cdk/package.json
@@ -23,12 +23,14 @@
     "express": "^5.0.0",
     "uuid": "^11.0.0",
     "aws-cdk-lib": "^2.150.0",
-    "constructs": "^10.3.0"
+    "constructs": "^10.3.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
     "@types/uuid": "^10.0.0",
+    "@types/js-yaml": "^4.0.9",
     "aws-cdk": "^2.150.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
