完成: AWS CDK移行版に外部設定読み込み機能を追加
- 全Lambda関数（api, oauth, slackbot）に外部設定ファイル読み込み機能を実装
- js-yamlをpackage.jsonに追加
- Lambda環境では/opt/config/secrets.yml、ローカルでは../config/secrets.ymlから読み込み
- 環境変数フォールバック機能を追加
- READMEを更新して新しい構造と自己完結型の特徴を説明
- backend/とslackbot/ディレクトリに依存しない完全独立版を実現

--- a/backend-cdk/lambda/oauth/package.json
+++ b/backend-cdk/lambda/oauth/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/lib-dynamodb": "^3.540.0",
     "axios": "^1.6.0",
     "express": "^5.0.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "js-yaml": "^4.1.0"
   }
 }
