--- a/backend-cdk/lambda/slackbot/package.json
+++ b/backend-cdk/lambda/slackbot/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
-    "@slack/bolt": "^4.0.0"
+    "@slack/bolt": "^4.0.0",
+    "js-yaml": "^4.1.0"
   }
 }
