feat: AWS SAM環境別デプロイ設定を追加
- samconfig.dev.toml: 開発環境用設定
- samconfig.prod.toml: 本番環境用設定
- samconfig.toml: デフォルト環境設定に更新
- deploy.sh: 環境別デプロイスクリプトに強化
- README.md: 環境別デプロイ手順を追加

環境変数による本番シークレット管理:
- 開発: SLACK_*_DEV
- 本番: SLACK_*_PROD
- デフォルト: SLACK_*

--- a/backend-sam/samconfig.toml
+++ b/backend-sam/samconfig.toml
@@ -1,8 +1,10 @@
 version = 0.1
+
+# デフォルト環境（開発用）
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "slack-integration-sam"
+stack_name = "slack-integration-sam-default"
 s3_bucket = ""  # SAM will create a managed bucket
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
@@ -11,6 +13,12 @@ parameter_overrides = [
   "SlackClientSecret=${SLACK_CLIENT_SECRET}",
   "SlackSigningSecret=${SLACK_SIGNING_SECRET}",
   "SlackRedirectUri=${SLACK_REDIRECT_URI}",
+  "SlackBotToken=${SLACK_BOT_TOKEN}",
   "DynamoDBTableName=SlackIntegrations"
 ]
 region = "ap-northeast-1"
+
+[default.local_start_api]
+[default.local_start_api.parameters]
+host = "127.0.0.1"
+port = 3000
