feat: config/secrets.ymlを廃止し、samconfig.tomlベースの設定管理に変更
- config/secrets.yml廃止: Lambda関数での設定ファイル読み込み機能を削除
- js-yaml依存関係削除: 各Lambda関数のpackage.jsonから削除
- samconfig.tomlベース: 各環境の設定を直接ハードコード
- gitignore更新: 実際のsamconfig*.tomlを除外、example版のみ追跡
- サンプルファイル追加: samconfig.example.toml, samconfig.dev.example.toml, samconfig.prod.example.toml
- deploy.sh簡素化: 環境変数チェックを削除、設定ファイル切り替えのみ
- README更新: 新しい設定管理方式の説明に変更

設定管理方式: 環境変数依存なし、samconfig.tomlに直接シークレットをハードコード

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 /config/secrets.yml
 !/config/secrets.example.yml
+
+# AWS SAM設定ファイル (実際の値を含むため除外)
+**/samconfig.toml
+**/samconfig.dev.toml
+**/samconfig.prod.toml
+# サンプルファイルは含める
+!**/samconfig.example.toml
+!**/samconfig.*.example.toml
+
 .serverless
 node_modules
 .DS_Store
