--- a/backend-sam/src/oauth/package.json
+++ b/backend-sam/src/oauth/package.json
@@ -12,7 +12,6 @@
     "serverless-http": "^3.2.0",
     "axios": "^1.7.3",
     "@aws-sdk/client-dynamodb": "^3.632.0",
-    "@aws-sdk/lib-dynamodb": "^3.632.0",
-    "js-yaml": "^4.1.0"
+    "@aws-sdk/lib-dynamodb": "^3.632.0"
   }
 }
