CDK版: secrets.ymlから環境変数ベースの設定管理に移行
- 全CDK Lambda関数からsecrets.yml読み込み処理を削除
- 環境別設定ファイル(cdkconfig.{env}.json)によるデプロイ設定に変更
- Lambda関数は環境変数のみを使用するよう修正
- CDKスタックで設定ファイルから環境変数をLambda関数に注入
- 環境別デプロイスクリプト(deploy.sh)を追加
- .gitignoreを更新してCDK実設定ファイルを除外
- README.mdを新しい設定管理方式に更新

変更内容:
- backend-cdk/lambda/api/app.js: secrets.yml削除、環境変数のみ使用
- backend-cdk/lambda/oauth/oauth.js: secrets.yml削除、環境変数のみ使用
- backend-cdk/lambda/slackbot/bot.js: secrets.yml削除、環境変数のみ使用
- backend-cdk/lib/slack-integration-stack.ts: 環境変数ベース設定に変更
- backend-cdk/bin/slack-integration.ts: 設定ファイル読み込み追加
- backend-cdk/config/: サンプル設定ファイル追加
- backend-cdk/deploy.sh: 環境別デプロイスクリプト追加
- .gitignore: CDK設定ファイル除外ルール追加

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@
 .serverless
 node_modules
 .DS_Store
+
+# SAM環境別設定ファイル（実際の値を含むもの）を除外
+backend-sam/samconfig.toml
+backend-sam/samconfig.dev.toml
+backend-sam/samconfig.prod.toml
+# exampleファイルは除外しない
+!backend-sam/samconfig.example.toml
+!backend-sam/samconfig.dev.example.toml
+!backend-sam/samconfig.prod.example.toml
+
+# CDK環境別設定ファイル（実際の値を含むもの）を除外
+backend-cdk/config/cdkconfig.json
+backend-cdk/config/cdkconfig.dev.json
+backend-cdk/config/cdkconfig.prod.json
+# exampleファイルは除外しない
+!backend-cdk/config/cdkconfig.example.json
+!backend-cdk/config/cdkconfig.dev.example.json
+!backend-cdk/config/cdkconfig.prod.example.json
