SAM版: SlackBot用の独立したAPI Gatewayを作成
元のServerless Framework版に合わせて、Backend APIとSlackBot APIを分離:

- Backend API Gateway (SlackIntegrationApi): Frontend用のAPIとOAuth処理
  - /{proxy+} -> ApiFunction
  - /slack/oauth/{proxy+} -> OAuthFunction

- SlackBot API Gateway (SlackBotApi): Slack Webhook専用（独立）
  - /slack/events -> SlackBotFunction

変更内容:
- SlackBotFunctionのイベントをSlackBotApiに変更
- SlackBotApi用の独立したAPI Gateway定義を追加
- Backend API Gatewayのタイトルを明確化
- 出力セクションに両API Gateway URLを追加
- SlackEventsUrl出力を追加（Slackアプリ設定用）

セキュリティと運用の向上:
- Frontend用APIとSlack Webhook APIの完全分離
- 独立したデプロイとスケーリングが可能
- より明確なアクセス制御とモニタリング

--- a/backend-sam/template.yaml
+++ b/backend-sam/template.yaml
@@ -132,14 +132,14 @@ Resources:
         SlackEvent:
           Type: Api
           Properties:
-            RestApiId: !Ref SlackIntegrationApi
+            RestApiId: !Ref SlackBotApi
             Path: /slack/events
             Method: POST
       LoggingConfig:
         LogFormat: JSON
         LogGroup: !Ref SlackBotLogGroup
 
-  # API Gateway
+  # Backend API Gateway
   SlackIntegrationApi:
     Type: AWS::Serverless::Api
     Properties:
@@ -151,7 +151,7 @@ Resources:
       DefinitionBody:
         swagger: "2.0"
         info:
-          title: "Slack Integration API"
+          title: "Slack Integration Backend API"
           version: "1.0"
         basePath: "/Prod"
         schemes:
@@ -187,6 +187,21 @@ Resources:
                 passthroughBehavior: "when_no_match"
                 httpMethod: "POST"
                 type: "aws_proxy"
+
+  # SlackBot API Gateway (独立)
+  SlackBotApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: Prod
+      DefinitionBody:
+        swagger: "2.0"
+        info:
+          title: "Slack Integration SlackBot API"
+          version: "1.0"
+        basePath: "/Prod"
+        schemes:
+          - "https"
+        paths:
           /slack/events:
             post:
               produces:
@@ -218,9 +233,12 @@ Resources:
       RetentionInDays: 7
 
 Outputs:
-  SlackIntegrationApi:
-    Description: "API Gateway endpoint URL for Prod stage"
+  BackendApi:
+    Description: "Backend API Gateway endpoint URL for Prod stage (Frontend用)"
     Value: !Sub "https://${SlackIntegrationApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
+  SlackBotApi:
+    Description: "SlackBot API Gateway endpoint URL for Prod stage (Slack Webhook用)"
+    Value: !Sub "https://${SlackBotApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
   DynamoDBTableName:
     Description: "DynamoDB table name"
     Value: !Ref SlackIntegrationsTable
@@ -236,3 +254,6 @@ Outputs:
   SlackOAuthRedirectUri:
     Description: "Slack OAuth Redirect URI (設定に使用)"
     Value: !Sub "https://${SlackIntegrationApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/slack/oauth/callback"
+  SlackEventsUrl:
+    Description: "Slack Events Request URL (Slackアプリ設定用)"
+    Value: !Sub "https://${SlackBotApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/slack/events"
