feat: AWS SAM版の設定最適化とプロファイル対応
- 各LambdaのpackageからAWS SDK v3を除外（Lambda実行環境に含まれるため）
- package.jsonからscriptsセクション削除、直接コマンド実行に統一
- 全SAMコマンドにAWSプロファイル指定を追加
- ローカル実行用設定ファイル（samconfig.local.toml）追加
- deploy.shスクリプト削除、コマンドライン実行に統一
- READMEに詳細なコマンド例とトラブルシューティング追加
- .gitignoreにSAMビルド成果物とローカル設定ファイル追加
- テンプレートファイルの循環依存問題修正

--- a/backend-sam/src/slackbot/package.json
+++ b/backend-sam/src/slackbot/package.json
@@ -8,8 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@slack/bolt": "^3.18.0",
-    "@aws-sdk/client-dynamodb": "^3.632.0",
-    "@aws-sdk/lib-dynamodb": "^3.632.0"
+    "@slack/bolt": "^3.18.0"
   }
 }
