--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 **/samconfig.toml
 **/samconfig.dev.toml
 **/samconfig.prod.toml
+**/samconfig.local.toml
 # サンプルファイルは含める
 !**/samconfig.example.toml
 !**/samconfig.*.example.toml
@@ -12,3 +13,6 @@
 .serverless
 node_modules
 .DS_Store
+
+# AWS SAM build artifacts
+**/.aws-sam/
