--- a/backend-sam/src/oauth/package.json
+++ b/backend-sam/src/oauth/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "express": "^4.19.2",
     "serverless-http": "^3.2.0",
-    "axios": "^1.7.3",
-    "@aws-sdk/client-dynamodb": "^3.632.0",
-    "@aws-sdk/lib-dynamodb": "^3.632.0"
+    "axios": "^1.7.3"
   }
 }
