--- a/backend-sam/template.yaml
+++ b/backend-sam/template.yaml
@@ -18,26 +18,25 @@ Parameters:
     Type: String
     Description: Slack Client ID
     NoEcho: true
-    Default: "{{resolve:ssm:/slack-integration/client-id:1}}"
   SlackClientSecret:
     Type: String
     Description: Slack Client Secret
     NoEcho: true
-    Default: "{{resolve:ssm-secure:/slack-integration/client-secret:1}}"
   SlackSigningSecret:
     Type: String
     Description: Slack Signing Secret
     NoEcho: true
-    Default: "{{resolve:ssm-secure:/slack-integration/signing-secret:1}}"
   SlackRedirectUri:
     Type: String
     Description: Slack OAuth Redirect URI
-    Default: "{{resolve:ssm:/slack-integration/redirect-uri:1}}"
   SlackBotToken:
     Type: String
     Description: Slack Bot Token
     NoEcho: true
-    Default: "{{resolve:ssm-secure:/slack-integration/bot-token:1}}"
+  SlackStateSecret:
+    Type: String
+    Description: Slack State Secret for OAuth
+    NoEcho: true
   DynamoDBTableName:
     Type: String
     Default: SlackIntegrations
@@ -81,9 +80,6 @@ Resources:
             RestApiId: !Ref SlackIntegrationApi
             Path: /{proxy+}
             Method: ANY
-      LoggingConfig:
-        LogFormat: JSON
-        LogGroup: !Ref ApiLogGroup
 
   # OAuth Lambda Function
   OAuthFunction:
@@ -107,9 +103,6 @@ Resources:
             RestApiId: !Ref SlackIntegrationApi
             Path: /slack/oauth/{proxy+}
             Method: ANY
-      LoggingConfig:
-        LogFormat: JSON
-        LogGroup: !Ref OAuthLogGroup
 
   # SlackBot Lambda Function
   SlackBotFunction:
@@ -135,9 +128,6 @@ Resources:
             RestApiId: !Ref SlackBotApi
             Path: /slack/events
             Method: POST
-      LoggingConfig:
-        LogFormat: JSON
-        LogGroup: !Ref SlackBotLogGroup
 
   # Backend API Gateway
   SlackIntegrationApi:
