security: secrets.example.yml内のSlackトークンプレースホルダーを安全な形式に変更
- xoxb-プレフィックスを削除してGitHub push protectionをバイパス
- 実際のシークレット形式でないプレースホルダーに変更

Fixes GitHub push protection violation for main branch

--- a/config/secrets.example.yml
+++ b/config/secrets.example.yml
@@ -6,6 +6,6 @@ SLACK_CLIENT_SECRET: "your-slack-client-secret"  # SlackアプリのClient Secre
 SLACK_SIGNING_SECRET: "your-slack-signing-secret" # SlackアプリのSigning Secret
 SLACK_STATE_SECRET: "state-secret"               # SlackアプリのState Secret (CSRF対策などに利用)openssl rand -base64 32などで生成
 
-SLACK_BOT_TOKEN: "xoxb-your-bot-token"           # Slack Bot Token
+SLACK_BOT_TOKEN: "your-slack-bot-token"             # Slack Bot Token
 DYNAMODB_TABLE: "SlackIntegrations"              # DynamoDBテーブル名
 SLACK_REDIRECT_URI: "https://example.com/slack/oauth/callback" # Slack OAuthのリダイレクトURI
