CDK最適化: aws-lambda-nodejs & 高レベルコンストラクトの適用
主な変更:
- NodejsFunction with esbuild最適化 (minify, source maps, tree shaking)
- LambdaRestApi高レベルコンストラクトでAPI Gateway簡素化
- PolicyStatement & LogGroup factory patternでIAM/CloudWatch最適化
- .gitignoreにdist/ディレクトリ追加
- JavaScript ES Modules対応でビルド高速化

技術的改善:
- 冗長なLambdaIntegration手動設定を削除
- esbuild外部モジュール最適化 (@aws-sdk/* excluded)
- Node.js 22 & Architecture.X86_64対応
- 一貫性のあるログ保持期間設定 (ONE_WEEK)

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ node_modules
 # AWS関連 build artifacts
 **/.aws-sam/
 **/cdk.out/
+**/dist/
 backend-cdk/*.d.ts
 backend-cdk/lib/*.js
 backend-cdk/lib/*.d.ts
