--- a/backend-cdk/package.json
+++ b/backend-cdk/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^22.0.0",
     "@types/uuid": "^10.0.0",
     "aws-cdk": "^2.150.0",
+    "esbuild": "^0.21.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
