--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,9 @@
 service: Slack-integration-backend
-frameworkVersion: '3'
+frameworkVersion: '4'
+
+# ダッシュボード機能を無効化（AWS Profile使用）
+console: false
+
 provider:
   name: aws
   runtime: nodejs22.x
