--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.848.0",
-    "@aws-sdk/lib-dynamodb": "^3.850.0",
+    "@aws-sdk/client-dynamodb": "^3.868.0",
+    "@aws-sdk/lib-dynamodb": "^3.868.0",
     "@slack/web-api": "^7.9.3",
-    "express": "^5.1.0",
-    "serverless-http": "^3.2.0",
+    "hono": "^4.9.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
